For The last Time push

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </p>
 
             </div>
-            <div class="row row-cols-1 row-cols-md-3 g-5">
+            <div class="row row-cols-1 row-cols-md-3">
                 <div class="col">
                     <div class="card h-100 p-4 border-0">
                         <img src="images/feature-bike.jpg" class="card-img-top gray-scale" alt="...">
