--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Honda-Cbr</title>
     <!-- Pure CSS link  -->
     <link rel="stylesheet" href="style.css">
+    <!-- favicon Link  -->
+    <link rel="shortcut icon" href="images/fabicon.png" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
