--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!-- Starting Header  -->
     <header class="w-100 color  text-white">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
+            <div class="container-fluid">
+                <a class="navbar-brand ms-4 " href="#"> <img class="logo" src="images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
